TestSuite/Verification/Error/Parallel/Correctness/On-Device/Intra-Region/Accelerator/RecursionNestedTest.par
RecursionNestedTest{

map increment([Int] input): [Int] res{
    res[INDEX] = counter<<<>>>(input[INDEX])
}

recursion counter(Int input):Int res {
	res = input
    if input < 4 {
        res = counter<<<>>>(input + 1)
    } 
	return res
}


seq main() : Int {
    var [Int] initial = init_List([200],1)
    var [Int] result = init_List([200],1)
    
    /*execute the pattern on node 0 device 0 */
    result = increment<<<[0,2,0]>>>(initial)
    
    for var Int i = 0; i < #result; i++ {    
        if result[i] != 4 {
            print("Recursion not correct! Error in element: " {i})
            exit(1)
        }
    }
    
return 0 
}}
